# FrogSocial

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/: App.cpp  AppComponent.hpp
src/controller/: MyController.hpp
src/dto/: DTOs.hpp
test/: MyControllerTest.cpp  MyControllerTest.hpp  Tests.cpp
test/app/: MyApiTestClient.hpp  TestComponent.hpp
